# EcoMind

./: .env.example  .eslintrc.json  .gitignore  AUTOMATED_REVIEW_SETUP_GUIDE.md  CLEANUP_COMPLETE.md  COLLABORATIVE_REVIEW_GUIDE.md  EXTENSION_RELOAD_GUIDE.md  EXTENSION_SOURCE_CONSOLIDATION.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANUAL_TASKS_BEFORE_SUBMISSION.md  Makefile  PRIVACY.md  PRODUCTION_READINESS_CHECKLIST.md  QUICKSTART.md  QUICK_SUBMISSION_GUIDE.md  README.md  README_EXTENSION.md  create_chrome_icon.py  create_promo_assets.py  docker-compose.dev.yml  jest.config.js  manifest.json  orchestrator.py  pnpm-workspace.yaml  tsconfig.json
.claude/: APPROVAL_GATE_GUIDE.md  MULTI_ROUND_REVIEW.md  ORCHESTRATOR_VS_REVIEW_LOOP.md  RECOMMENDED_WORKFLOW.md
api/: Dockerfile  README.md  alembic.ini  deploy_local.sh  pyproject.toml  start_api.sh
api/alembic/: README  env.py
api/alembic/versions/: 001_initial_schema.py  002_add_user_password.py
api/app/: auth.py  db.py  main.py  seed.py
api/app/models/: __init__.py  aggregate.py  alert.py  audit.py  event.py  org.py  report.py  user.py
api/app/routes/: alerts.py  audits.py  auth.py  health.py  ingest.py  orgs.py  query.py  reports.py  users.py
api/scripts/: baseline_database.sh  deploy_verify.sh  run_migrations.sh  verify_schema.py
api/tests/: README.md  __init__.py  conftest.py
api/tests/test_auth/: test_authentication.py
api/tests/test_migrations/: __init__.py  test_initial_migration.py  test_migration_scripts.py  test_schema_verification.py
chrome-store-assets/: BROAD_HOST_PERMISSIONS_JUSTIFICATION.md  PRIVACY_POLICY.md  PRIVACY_POLICY_HOSTING.md  PRIVACY_PRACTICES_RESPONSES.md  STORE_LISTING.md  SUBMISSION_CHECKLIST.md  (+1 more)
sdks/python/: README.md  pyproject.toml
sdks/python/ecomind_sdk/: __init__.py  client.py
worker/: Dockerfile  README.md  pyproject.toml
worker/worker/: main.py
worker/worker/services/: alerts.py  enrichment.py  factors.py
(+167 files in other folders)
